--- a/elements/site-lisp/entropy-emacs-doc/org/entropy-emacs_introduction.org
+++ b/elements/site-lisp/entropy-emacs-doc/org/entropy-emacs_introduction.org
@@ -370,11 +370,21 @@ other emacs intern toolchain.
   forground covered on black background.
 
   Layout switching was through the way of query prompt within
-  minibuffer and enhanced with candidates showing list powered by [[file:../annex/img/screenshot_2018-11-18_21-24-42.png][ivy]],
+  minibuffer and enhanced with candidates showing list powered by [[https://github.com/abo-abo/swiper][ivy]],
   each candidate was one unique slot number with workspace name:
 
-  #+attr_org: :width 600px
-  [[file:../annex/img/Snipaste_2018-03-12_17-49-51_2018-03-12_17-50-08.png]]
+  #+BEGIN_EXAMPLE
+    +--------------------------------------------------------------------------------+
+    |  * 169 U(Unix) *scratch*      Lisp Interactioin Orgstruct>>      << 4: 23 ALL  |
+    +--------------------------------------------------------------------------------+
+    (1/3) Enter slot:
+
+         +------------------+
+    ---> |1: basic workspace|
+         +------------------+
+          2: Readme edit
+          3: News reader
+  #+END_EXAMPLE
 
   But the easist way for doing like this was using the shortcuts
   prefix =[eprefix] w= with the workspace slots number
@@ -478,29 +488,20 @@ other emacs intern toolchain.
   keybinding =C-c v=, after then, you will be required to create the
   derived workspace tag name and the last you will get the workspace
   as displayed with slot and tag name format as
-  =main-slot.derived_number:⛓main-slot:"main workspace
-  tagname"☛derived name=
 
-  [[file:../annex/img/screenshot_2018-11-18_23-11-04.png]] 
-  [[file:../annex/img/screenshot_2018-11-18_23-11-32.png]] 
-  [[file:../annex/img/screenshot_2018-11-18_23-12-03.png]] 
-  [[file:../annex/img/screenshot_2018-11-18_23-12-34.png]]
+  : main-slot.derived_number:⛓main-slot:"main workspace tagname"☛derived name
 
   _Above demos show the face and the instant display format of derived
   slot derived from the main slot '1:temp'._
 
   For toggle the derived slot, keybinding =C-c M-v= as so.
 
-  Following gif shows the complete process for toggle to derived slot
-  and back to main slot, the latest step for back to top was hanged
-  with keybinding =[eprefix] w C-o= which call function
-  =entropy/emacs-basic-eyebrowse-switch-top=, it's useful for quicly
-  back from the temp derived slot to top (called 'top' by main) slot
-  without remember the current main slot number or backing with
-  calling =entropy/emacs-basic-eyebrowse-switch-basic-window=.
-
-  #+attr_org: :width 400px
-  [[file:../annex/img/eyebrowse-derived-toggle_2018-11-18_23-21-17.gif]]
+  For backing to main slot, was hanged with keybinding =[eprefix] w
+  C-o= which call function =entropy/emacs-basic-eyebrowse-switch-top=,
+  it's useful for quicly back from the temp derived slot to top
+  (called 'top' by main) slot without remember the current main slot
+  number or backing with calling
+  =entropy/emacs-basic-eyebrowse-switch-basic-window=.
 
 + *Derived slot limitation:*
 
@@ -618,13 +619,13 @@ way for solving that problem was what it is.
 :END:
 =entropy-emacs= provide four kinds modeline style:
 
-| name            | tag             | demo visualization                                   |
-|-----------------+-----------------+------------------------------------------------------|
-| origin-specific | origin          | [[file:../annex/img/screenshot_2018-08-08_03-13-00.png]] |
-| doom-modeline   | doom            | [[file:../annex/img/screenshot_2018-08-08_03-16-43.png]] |
-| sapceline       | spaceline       | [[file:../annex/img/screenshot_2018-08-08_03-14-35.png]] |
-| spaceline-icons | spaceline-icons | [[file:../annex/img/screenshot_2018-08-08_03-15-50.png]] |
-| powerline       | powerline       | [[file:../annex/img/screenshot_2018-08-08_03-13-55.png]] |
+| name            | tag             | description                                                         |
+|-----------------+-----------------+---------------------------------------------------------------------|
+| origin-specific | origin          | minor extended origin `mode-line-format`                            |
+| doom-modeline   | doom            | morden simply mode-line style extracted from [[https://github.com/hlissner/doom-emacs][doom-emacs]]             |
+| sapceline       | spaceline       | morden extensible mode-line style of [[https://www.spacemacs.org/][spacemacs]]                      |
+| spaceline-icons | spaceline-icons | [[https://github.com/domtronn/all-the-icons.el][all-the-icons]] patched =spaceline=                                   |
+| powerline       | powerline       | the enhanced exensible mordern mode-line based used for =spaceline= |
 
 
 Each of them are combined specific for be fit for =entropy-emacs=. You
@@ -732,9 +733,15 @@ using, if onece you get it on your scatter doing, you will find it was
 really simple and crude which can not be used as the daily tool for
 thus. As the result, =entropy-emacs= usig the most powerful and
 comprehensive 'pinyin' function built melpa extentioin [[https://github.com/tumashu/pyim][pyim]] :
-#+attr_org: :width 400px
-#+attr_html: :width 400px
-[[file:../annex/img/pyim-demo_2018-11-20_21-36-29.gif]]
+
+#+BEGIN_EXAMPLE
+  这是一段中文说明，你好shijie
+                        ^
+                        |
+                        +-------------------------+
+                        | 1. 世界 2. 时节 .....   |
+                        +-------------------------+
+#+END_EXAMPLE
 
 Above demo shows the fully process for input chinese using
 pyim. pinyin candidates shown within the tooltip widget =posframe=
@@ -1696,26 +1703,45 @@ providing the web front-end realtime previewer feature.
   http://127.0.0.1:8080/skewer/demo , this page was the one previewing
   all results generated by =skewer-mode=.
 
-  At the beginning, there's nothing in this page as demo shown below:
-
-  #+attr_org: :width 400px
-  [[file:../annex/img/screenshot_2018-08-01_23-23-21.png]]
-
-  The following interaction demo shows the full process as is:
-
-  #+attr_org: :width 400px
-  #+attr_html: :style max-width:800px
-  [[file:../annex/img/skewer-demo_2018-08-02_02-46-46.gif]]
-
-  Above instance shows the process sending one html code block into
-  server, after dealing finished data, external browser show the
-  result with evaluating current js scripts.
-
   =skewer-mode= support css well, for css html and javascript, it
   divided three minor-modes individually and functionally purpose as
   the list below:
 
-  [[file:../annex/img/screenshot_2018-08-02_03-05-58.png]]
+  #+BEGIN_EXAMPLE
+    The keybindings for evaluating expressions in the browser are just
+    like the Lisp modes. These are provided by the minor mode skewer-mode.
+
+    ,* C-x C-e: Evaluate the form before the point and display the result
+     in the minibuffer. If given a prefix argument, insert the result into
+     the current buffer.
+ 
+    ,* C-M-x: Evaluate the top-level form around the point.
+
+    ,* C-c C-k: Load the current buffer.
+
+    ,* C-c C-z: Select the REPL buffer.
+
+
+    The result of the expression is echoed in the minibuffer.
+
+    Additionally, css-mode and html-mode get similar sets of bindings for
+    modifying the CSS rules and HTML on the current page.
+
+    CSS
+
+    ,* C-x C-e: Load the declaration at the point.
+    ,* C-M-x: Load the entire rule around the point.
+    ,* C-c C-k: Load the current buffer as a stylesheet.
+
+    HTML
+
+    ,* C-M-x: Load the HTML tag immediately around the point.
+
+    Note: run-skewer uses browse-url to launch the browser. This may
+    require further setup depending on your operating system and personal
+    preferences.
+  #+END_EXAMPLE
+
 
   You can touching =C-c C-z= to active repl for js within js2-mode
   buffer.
@@ -1758,11 +1784,6 @@ providing the web front-end realtime previewer feature.
   impatient-mode just the one for html design layout tool, otherwise
   for the meaning as just for the single file previewing as the css
   html js all in one embedding file as for.
-
-  #+attr_org: :width 400px
-  #+attr_html: :style max-width:800px
-  [[file:../annex/img/impatient-mode-demo_2018-08-02_14-25-25.gif]]
-
 
 *** Python anaconda
 :PROPERTIES:
@@ -1871,10 +1892,6 @@ replaced ~find-file~.
       Notice: bug that can not cancel company-mode origin tooltip
       when =C-g= for this command.
      #+END_QUOTE
-
-     [[file:../annex/img/counsel-company_2018-04-14_22-33-09.gif]]
-     
-
 
 + *ivy read action:*
 
@@ -2002,20 +2019,6 @@ hacking see below:
      ~entropy/emacs-tools-elfeed-proxy-update-all-nil-feeds~.
 
 All the feeds filter can be reset with short cut =S=.
-
-[[file:../annex/img/Snipaste_2018-09-09_13-05-02_2018-09-09_13-05-39.png]]
-
-[[file:../annex/img/Snipaste_2018-09-09_13-02-18_2018-09-09_13-05-51.png]]
-
-[[file:../annex/img/Snipaste_2018-09-09_13-03-05_2018-09-09_13-05-59.png]]
-
-[[file:../annex/img/Snipaste_2018-09-09_13-03-49_2018-09-09_13-06-05.png]]
-
-[[file:../annex/img/Snipaste_2018-09-09_13-04-20_2018-09-09_13-06-11.png]]
-      
-[[file:../annex/img/Snipaste_2018-09-09_13-10-23_2018-09-09_13-10-52.png]]
-
-
 
 *** Gnus
 :PROPERTIES:
